kubernetes/apps/base/garage/garage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: garage-webui
    app.kubernetes.io/instance: garage-webui
    app.kubernetes.io/name: garage-webui
  name: garage-webui
  namespace: garage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: garage-webui
  template:
    metadata:
      labels:
        app: garage-webui
        app.kubernetes.io/name: garage-webui
    spec:
      nodeSelector:
        worker: "true"
      containers:
        - image: khairul169/garage-webui:1.0.8
          name: garage-webui
