kubernetes/apps/base/garage/garage/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-webui
  namespace: garage
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage.f9.casa`)
      kind: Rule
      services:
        - name: garage-webui
          port: 3909
      middlewares:
        - name: authentik
          namespace: authentik
